Added whitespace stripping to wordlist, for better platform agnosticism

--- a/FalloutHack.cabal
+++ b/FalloutHack.cabal
@@ -20,3 +20,4 @@ executable FalloutHack
   other-modules:       Paths_FalloutHack
   build-depends:       base >= 4.7 && < 5
                      , random
+                     , text
